tests/baselines/reference/typeParameterDiamond2.errors.txt
tests/cases/compiler/typeParameterDiamond2.ts(8,13): error TS2322: Type 'T | U' is not assignable to type 'Top'.
  'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
    Type 'U' is not assignable to type 'Top'.
      'U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeParameterDiamond2.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  'Bottom' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
    Type 'T | U' is not assignable to type 'Top'.
      'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
        Type 'U' is not assignable to type 'Top'.
          'U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/typeParameterDiamond2.ts (2 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T extends Top, U>() {
            function diamondBottom<Bottom extends T | U>() {
                var top: Top;
                var middle: T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:   'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type 'U' is not assignable to type 'Top'.
!!! error TS2322:       'U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
                middle = bottom;
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   'Bottom' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:       'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:         Type 'U' is not assignable to type 'Top'.
!!! error TS2322:           'U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
            }
        }
    }